Upgrade OpenJDK from 14 to 17
The compilation target remains Java 8.